# aiprep

./: .gitignore  README.md  aiprep  aiprep.py  setup.cfg
src/aiprep/: __init__.py  __main__.py  cli.py  core.py
