[metadata]
name = aiprep
version = attr: aiprep.__version__
description = A tool for preparing files for AI interactions
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    # Add any dependencies here

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    aiprep = aiprep.__main__:main

[options.extras_require]
dev =
    pytest>=6.0
    black
    flake8
    isort
